[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GASBUS_flight_logic"
version = "0.0.1"
authors = [
    { name="Shawn Jones", email="sjones@gas.usu.edu" },
    { name="Taylor Rowser", email="trowser@gas.usu.edu" },
    { name="Kade Angell", email="kangell@gas.usu.edu" },
]
description = "The GASBUS flight logic software"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SmallSatGasTeam/GASBUS/"
"Bug Tracker" = "https://github.com/SmallSatGasTeam/GASBUS/issues"